@@ -1,3 +1,9 @@
+2010-04-07  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[test] Test multi-line log messages.
+
+	* alive.test: Make some log messages multi-line.
+
 2010-04-06  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[build] Ignore `getwd', `getabsname'.
